@@ -5,6 +5,7 @@ Bugs fixed:
 
 - 3386391 HOST_NAME_MAX undefined
 - 3393324 sfcb process abort in IndCIMXMLHandlerInvokeMethod
+- 3398337 Namespaces of filter and handler for IndSub not checked
 
 Changes in 1.3.12
 =================
